--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,7 +136,7 @@ deploy-app:
     - docker stop $DOCKER_CONTAINER_NAME_BUILD  || true
     - docker rm $DOCKER_CONTAINER_NAME_BUILD  || true
     - "docker run -d --rm \
-    --env ParkingContextConnectionString='Server=mssqlparcindus_$CI_COMMIT_REF_NAME;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;'
+    --env ParkingContextConnectionString='Server=mssqlparcindus_$CI_COMMIT_REF_NAME;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;' \
     -l traefik.http.services.parking.LoadBalancer.server.port=80 \
     -l traefik.http.routers.parking.rule=Host(`parking.deploy.indus.aix.apsdigit.lan`) \
     -l traefik.http.routers.parking.entrypoints=http,https \
