--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,9 @@ create-image-sql:
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
+    # Build Image mssqlcusto
     - "docker build -t $DOCKER_IMAGE -f DevOps/mssql/dockerfile ."
+    # Push Image to Harbor
     - docker push $DOCKER_IMAGE
 
 create-image-builder:
@@ -35,10 +37,9 @@ create-image-builder:
     before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
-    - "docker build -t $DOCKER_IMAGE -f DevOps/builder/dockerfile \
-    --build-arg parking_connexion=$PARKING_CONNEXION \
-    --build-arg keycloak_pwd=$KEYCLOAK_PWD \
-    --build-arg uri=$URI ." 
+      # Build image builder
+    - "docker build -t $DOCKER_IMAGE -f ./DevOps/builder/dockerfile --build-arg parking_connexion=$PARKING_CONNEXION --build-arg keycloak_pwd=$KEYCLOAK_PWD --build-arg uri=$URI ." 
+    # Push Image to docker
     - docker push $DOCKER_IMAGE
 
 create-image-app:
@@ -54,7 +55,9 @@ create-image-app:
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
+    # Build image runner
     - "docker build -t $DOCKER_IMAGE -f DevOps/dockerfile ."
+    # Push Image to docker
     - docker push $DOCKER_IMAGE
 
 
