--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ create-image-builder:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
-    - "docker build -f ./DevOps/builder/dockerfile -t $DOCKER_IMAGE --build-arg parking_connexion=$PARKING_CONNEXION --build-arg keycloak_pwd=$KEYCLOAK_PWD --build-arg uri=$URI ." 
+    - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE --build-arg keycloak_pwd=$KEYCLOAK_PWD --build-arg uri=$URI ." 
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
