--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -7,11 +7,11 @@ COPY . /src/myWebApp
 ENV ParkingContextConnectionString='Server=$bdd_host;Database=parcIndus;User Id=parcadmin;Password=$bdd_pwd;'
 ENV KeycloakPasswordUser=$keycloak
 ENV WebsiteUri=$uri
-RUN echo $ParkingContextConnectionString
-RUN echo $bdd_host
-RUN echo $bdd_pwd
-RUN echo $keycloak_pwd
-RUN echo $uri
+RUN print $ParkingContextConnectionString
+RUN print $bdd_host
+RUN print $bdd_pwd
+RUN print $keycloak_pwd
+RUN print $uri
 RUN mkdir /app
 RUN mv /src/myWebApp/GestionPlacesParking/Settings/keycloak.Development.json /src/myWebApp/GestionPlacesParking/Settings/keycloak.Production.json 
 RUN dotnet tool install -g dotnet-ef
