--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -7,6 +7,7 @@ COPY . /src/myWebApp
 ENV ParkingContextConnectionString= "Server=$bdd_host;Database=parcIndus;User Id=parcadmin;Password=$bdd_pwd;"
 ENV KeycloakPasswordUser=$keycloak
 ENV WebsiteUri=$uri
+RUN echo "ParkingContextConnectionString"
 RUN mkdir /app
 RUN mv /src/myWebApp/GestionPlacesParking/Settings/keycloak.Development.json /src/myWebApp/GestionPlacesParking/Settings/keycloak.Production.json 
 RUN dotnet tool install -g dotnet-ef
