--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -4,7 +4,7 @@ ARG bdd_pwd
 ARG keycloak_pwd
 ARG uri
 COPY . /src/myWebApp
-ENV ParkingContextConnectionString= "Server=$bdd_host;Database=parcIndus;User Id=parcadmin;Password=$bdd_pwd;"
+ENV ParkingContextConnectionString= "\"'Server=$bdd_host;Database=parcIndus;User Id=parcadmin;Password=$bdd_pwd;'"
 ENV KeycloakPasswordUser=$keycloak
 ENV WebsiteUri=$uri
 RUN echo "ParkingContextConnectionString"
