--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -4,10 +4,17 @@ ARG bdd_pwd
 ARG keycloak_pwd
 ARG uri
 COPY . /src/myWebApp
-ENV ParkingContextConnectionString= "\"'Server=$bdd_host;Database=parcIndus;User Id=parcadmin;Password=$bdd_pwd;'"
-ENV KeycloakPasswordUser=$keycloak
-ENV WebsiteUri=$uri
-RUN echo "ParkingContextConnectionString"
+ENV ParkingContextConnectionString= 'Server=mssqlparcindus_cicd;Database=parcIndus;User Id=parcadmin;Password=!@pside2022!;'
+ENV KeycloakPasswordUser='pyLcVV$tAFRaNv3J'
+ENV WebsiteUri='https://parking.deploy.indus.aix.apsdigit.lan'
+RUN echo $bdd_host
+RUN echo "$bdd_host"
+RUN echo $bdd_pwd
+RUN echo "$bdd_pwd"
+RUN echo $keycloak_pwd
+RUN echo "$keycloak_pwd"
+RUN echo $uri
+RUN echo "$uri"
 RUN mkdir /app
 RUN mv /src/myWebApp/GestionPlacesParking/Settings/keycloak.Development.json /src/myWebApp/GestionPlacesParking/Settings/keycloak.Production.json 
 RUN dotnet tool install -g dotnet-ef
