--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,11 +36,15 @@ create-image-builder:
         KEYCLOAK_PWD: 'pyLcVV$tAFRaNv3J'
         URI: 'https://parking.deploy.indus.aix.apsdigit.lan'
         BDD_HOST: mssqlparcindus_$CI_COMMIT_REF_NAME
+        BDD_PWD: $BDD_PWD
+        KEYCLOAK_PWD: $KEYCLOAK_PWD
+        URI: $WebsiteURI
         CI_DEBUG_TRACE: "true"
     before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
+    - echo "KEYCLOAK_PWD"
     - docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE --build-arg bdd_host=$BDD_HOST --build-arg bdd_pwd=$BDD_PWD --build-arg keycloak_pwd=$KEYCLOAK_PWD --build-arg uri=$URI . 
     # Push Image to docker
     - docker push $DOCKER_IMAGE
@@ -78,6 +82,9 @@ deploy-BDD:
     DOCKER_CONTAINER_NAME_SQL: mssqlparcindus_$CI_COMMIT_REF_NAME
     DOCKER_VOLUME: bddparcindus$CI_COMMIT_REF_NAME
     DOCKER_NETWORK: parcindus
+    BBD_PWD: $BDD_PWD
+    EULA: $ACCEPT
+    VERSION: $BDD_VERSION
     CI_DEBUG_TRACE: "true"
   # To know how this is working : https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-the-docker-executor-with-docker-socket-binding
   before_script:
@@ -92,11 +99,8 @@ deploy-BDD:
     - docker network create $DOCKER_NETWORK || true
     - docker volume create $DOCKER_VOLUME || true
     # First run the back, with little sleep after it to let it some time
-    - echo "$ACCEPT"
-    - echo "$BDD_PWD"
-    - echo "$BDD_VERSION"
     - "docker run -d --rm \
-    --env ACCEPT_EULA=$ACCEPT \
+    --env ACCEPT_EULA=$EULA \
     --env SA_PASSWORD=$BDD_PWD \
     --env MSSQL_PID=$BDD_VERSION \
     --mount type=volume,src=$DOCKER_VOLUME,dst=/var/opt/mssql/data \
