--- a/DevOps/dockerfile
+++ b/DevOps/dockerfile
@@ -1,5 +1,9 @@
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
+ARG bdd_pwd
+ARG bdd_host
+ARG uri
+ENV ParkingContextConnectionString='Server=$bdd_host;Database=parcIndus;User Id=parcadmin;Password=$bdd_pwd'
 ENV IsSso=1
-ENV WebsiteUri='https://parking.deploy.indus.aix.apsdigit.lan'
+ENV WebsiteUri=$uri
 WORKDIR /app
 CMD  ["dotnet","GestionPlacesParking.Web.UI.dll"]
