--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ deploy-BDD:
     DOCKER_CONTAINER_NAME_BUILDER: buildparcindus_$CI_COMMIT_REF_NAME
     DOCKER_CONTAINER_NAME_APP: parking_indus_$CI_COMMIT_REF_NAME
     DOCKER_VOLUME: bddparcindus$CI_COMMIT_REF_NAME
+    DOCKER_APP_VOLUME: appparcindus$CI_COMMIT_REF_NAME
     DOCKER_NETWORK: parcindus
     BBD_PWD: $BDD_PWD
     EULA: $ACCEPT
@@ -106,6 +107,7 @@ deploy-BDD:
     - docker stop $DOCKER_CONTAINER_NAME_BUILD  || true
     - docker stop $DOCKER_CONTAINER_NAME_APP  || true
     - docker network rm $DOCKER_NETWORK || true
+    - docker volume rm $DOCKER_APP_VOLUME || true
     - docker volume rm $DOCKER_VOLUME || true
     - docker rm $DOCKER_CONTAINER_NAME_APP || true
     - docker rm $DOCKER_CONTAINER_NAME_BUILD  || true
