--- a/DevOps/builder/dockerfile
+++ b/DevOps/builder/dockerfile
@@ -15,4 +15,5 @@ WORKDIR /src/myWebApp
 RUN dotnet restore /src/myWebApp/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj
 RUN dotnet build /src/myWebApp/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj -c Release -o /app/
 RUN dotnet publish /src/myWebApp/GestionPlacesParking/GestionPlacesParking.Web.UI.csproj -c Release -o /app/
+ENTRYPOINT ["bash"]
 CMD  ["bash","/src/myWebApp/DevOps/builder/migration.sh"]
