--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -171,12 +171,13 @@ deploy-app:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
   script:
     # Run APP
-    - "docker run -d --rm \
+    - "docker run -d --rm -p 35880:80 -p 35843:443 \
     -l traefik.http.services.parking.LoadBalancer.server.port=80 \
     -l $TRAEFIK_LABEL_HOST \
     -l traefik.http.routers.parking.entrypoints=http,https \
     -l traefik.http.routers.parking.service=parking  \
     -l traefik.http.routers.parking.tls=true \
+    -l traefik.http.services.parking.loadbalancer.server.scheme=http \
     --network=$DOCKER_NETWORK \
     --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
     --name $DOCKER_CONTAINER_NAME_APP $DOCKER_IMAGE_APP "
