--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -173,11 +173,11 @@ deploy-app:
   script:
     # Run APP mount folder app compilé
     - "docker run -d --rm \
-    -l traefik.http.services.parking.LoadBalancer.server.port=80 \
+    -l traefik.http.services.$TRAEFIK_ROUTER.LoadBalancer.server.port=80 \
     -l $TRAEFIK_LABEL_HOST \
-    -l traefik.http.routers.parking.entrypoints=http,https \
-    -l traefik.http.routers.parking.service=$TRAEFIK_ROUTER \
-    -l traefik.http.routers.parking.tls=true \
+    -l traefik.http.routers.$TRAEFIK_ROUTER.entrypoints=http,https \
+    -l traefik.http.routers.$TRAEFIK_ROUTER.service=$TRAEFIK_ROUTER \
+    -l traefik.http.routers.$TRAEFIK_ROUTER.tls=true \
     --env KeycloakPasswordUser=$KEYCLOAK_PWD
     --network=$DOCKER_NETWORK \
     --mount type=volume,src=$DOCKER_VOLUME,dst=/app \
