--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,7 +162,7 @@ deploy-app:
     DOCKER_NETWORK: parcindus
     DOCKER_IMAGE_APP: harbor.indus.aix.apsdigit.lan/parcindus/appparcindus:$CI_COMMIT_REF_NAME
     TRAEFFIK_APP_URL: parking_$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan
-    TRAEFIK_LABEL_HOST: 'traefik.http.routers.parking.rule=Host(`$TRAEFIK_APP_URL`)'
+    TRAEFIK_LABEL_HOST: 'traefik.http.routers.$TRAEFIK_ROUTER.rule=Host(`$TRAEFIK_APP_URL`)'
     TRAEFIK_ROUTER: parking_$CI_COMMIT_REF_NAME
     BDD_PWD: $BDD_PWD
     BDD_HOST: $BDD_HOST
