--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,8 +46,8 @@ create-image-builder:
     - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE \
     --build-arg bdd_host=$BDD_HOST \
     --build-arg bdd_pwd=$BDD_PWD \
-    --build-arg keycloak_pwd=$KEYCLOAK_PWD \
     --build-arg uri=$URI . "
+    #--build-arg keycloak_pwd=$KEYCLOAK_PWD \
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
