--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,7 +113,7 @@ deploy-BDD:
     # Create the volumeBDD&network
     - docker network create $DOCKER_NETWORK || true
     # First run the back, with little sleep after it to let it some time
-    - "docker run -d -p 1433:1433 --rm \
+    - "docker run -d --rm \
     --env ACCEPT_EULA=$EULA \
     --env SA_PASSWORD=$BDD_PWD \
     --env MSSQL_PID=$BDD_VERSION \
