--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ create-image-builder:
         REGISTRY_URL: harbor.indus.aix.apsdigit.lan
         DOCKER_IMAGE: harbor.indus.aix.apsdigit.lan/parcindus/dotnetbuildparcindus:$CI_COMMIT_REF_NAME
         KEYCLOAK_PWD: $KC_PWD
-        URI: "'https://parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan'"
+        URI: "https://parking-$CI_COMMIT_REF_NAME.deploy.indus.aix.apsdigit.lan"
         BDD_HOST: $BDD_HOST
         BDD_PWD: $BDD_PWD
         CI_DEBUG_TRACE: "true"
@@ -42,12 +42,12 @@ create-image-builder:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD https://$REGISTRY_URL
     script:
       # Build image builder
-    - echo "KEYCLOAK_PWD"
     - "docker build -f DevOps/builder/dockerfile -t $DOCKER_IMAGE \
     --build-arg bdd_host=$BDD_HOST \
     --build-arg bdd_pwd=$BDD_PWD \
+    --build-arg keycloak_pwd=$KEYCLOAK_PWD \
     --build-arg uri=$URI . "
-    #--build-arg keycloak_pwd=$KEYCLOAK_PWD \
+    #
     # Push Image to docker
     - docker push $DOCKER_IMAGE
 
